--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -278,7 +278,7 @@
                 </div>
             </div>
             {% block content %}
-
+                {% block loader %}{%endblock%}
             {% endblock %}
         </div>
         <!--        <script src="http://maps.google.com/maps/api/js?sensor=true"></script>-->
