title on most pages updated

--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -1,6 +1,8 @@
 {% extends 'layouts/main.html' %}
 {% import 'macros/form_macros.html' as f %}
-
+{% block page_title %}
+Algotrader|Login
+{% endblock %}
 {% block content %}
 <div class="ui grid container login-container">
     <div class="eight wide computer sixteen wide mobile centered column">
