--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
-
+{% block page_title %}
+Market data
+{% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
     <div class="sixteen wide tablet sixteen wide computer centered column">
