--- a/app/templates/admin/pending_approval.html
+++ b/app/templates/admin/pending_approval.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
-
+{% block page_title %}
+Pending approval
+{% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
     <div class="sixteen wide tablet twelve wide computer centered column">
