--- a/app/templates/admin/users_monitor.html
+++ b/app/templates/admin/users_monitor.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
-
+{% block page_title %}
+Users monitor
+{% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
     <div class="sixteen wide tablet sixteen wide computer centered column">
