--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
-
+{% block page_title %}
+Algotrader|today
+{% endblock %}
 {% block content %}
 
 <div class="app-main__inner today-page">
