--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Algotrader server dashboard" />
         <meta name="msapplication-tap-highlight" content="no">
-        <title>{% block page_title %}{{ config.APP_NAME }}{% endblock %}</title>
+        <title>{% block page_title %}{% endblock %}</title>
         {# Any templates that extend this template can set custom_head_tags to add scripts to their page #}
 <!--        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />-->
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='scrolling/assets/favicon.ico') }}">
