--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/main.html' %}
-
+{% block page_title %}
+Algotrader
+{% endblock %}
 {% block content %}
 
 <div class="main-page">
