--- a/app/templates/admin/manage_user.html
+++ b/app/templates/admin/manage_user.html
@@ -1,6 +1,8 @@
 {% extends 'layouts/base.html' %}
 {% import 'macros/form_macros.html' as f %}
-
+{% block page_title %}
+Manage user
+{% endblock %}
 {% set deletion_endpoint = 'admin.delete_user_request' %}
 
 {% set endpoints = [
