--- a/app/templates/admin/new_user.html
+++ b/app/templates/admin/new_user.html
@@ -1,7 +1,9 @@
 {% extends 'layouts/base.html' %}
 {% import 'macros/form_macros.html' as f %}
 {% import 'macros/check_password.html' as check %}
-
+{% block page_title %}
+New user
+{% endblock %}
 {% block content %}
 
 <div class="ui stackable centered grid container">
