--- a/app/templates/admin/registered_users.html
+++ b/app/templates/admin/registered_users.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
-
+{% block page_title %}
+Registered users
+{% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
     <div class="sixteen wide tablet twelve wide computer centered column">
