--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -1,6 +1,8 @@
 {% extends 'layouts/base.html' %}
 {% import 'macros/form_macros.html' as f %}
-
+{% block page_title %}
+User Settings
+{% endblock %}
 {% macro user_info(user) %}
 <table class="ui compact definition table">
     <tr>
