--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
-
+{% block page_title %}
+Performance
+{% endblock %}
 {% block content %}
 <div class="app-main__inner">
     <div class="app-page-title">
