--- a/app/templates/account/join_invite.html
+++ b/app/templates/account/join_invite.html
@@ -1,4 +1,7 @@
 {% extends 'layouts/base.html' %}
+{% block page_title %}
+Algotrader|Join Invite
+{% endblock %}
 {% import 'macros/form_macros.html' as f %}
 {% import 'macros/check_password.html' as check %}
 
