--- a/app/templates/account/register.html
+++ b/app/templates/account/register.html
@@ -1,4 +1,7 @@
 {% extends 'layouts/main.html' %}
+{% block page_title %}
+Algotrader|Register
+{% endblock %}
 {% import 'macros/form_macros.html' as f %}
 {% import 'macros/check_password.html' as check %}
 
