--- a/app/templates/account/reset_password.html
+++ b/app/templates/account/reset_password.html
@@ -1,4 +1,7 @@
 {% extends 'layouts/main.html' %}
+{% block page_title %}
+Algotrader|Reset password
+{% endblock %}
 {% import 'macros/form_macros.html' as f %}
 
 {% block content %}
