--- a/app/templates/account/unconfirmed.html
+++ b/app/templates/account/unconfirmed.html
@@ -1,4 +1,7 @@
 {% extends 'layouts/main.html' %}
+{% block page_title %}
+Algotrader|Unconfirmed
+{% endblock %}
 {% import 'macros/form_macros.html' as f %}
 
 {% block content %}
