--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -12,6 +12,13 @@
   gtag('config', 'G-PT4L2HXNL9');
 </script>
 
+
+<!--    for Google sighn in -->
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="522889896001-nc04epa6n7s7n02hofi9f9t0m021t1lk.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+<!--    end of google sign in-->
+
     <link rel="shortcut icon" href="#"/>
     <meta name="charset" content="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
