--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -294,6 +294,7 @@ Trader station
                             <th class="text-center">Open</th>
                             <th class="text-center">Ask Price</th>
                             <th class="text-center">Target Price</th>
+                            <th class="text-center">Target Buy Price</th>
                             <th class="text-center">Algotrader Analytics</th>
                             <th class="text-center">Underprice(%)</th>
                             <th class="text-center">12M Momentum</th>
@@ -318,6 +319,7 @@ Trader station
                             <td class="text-center">{{value['Open']}}</td>
                             <td class="text-center">{{value['Ask']}}</td>
                             <td class="text-center">{{value['target_price']|round(2)}}</td>
+                            <td class="text-center">{{value['buying_target_price_fmp']|round(2)}}</td>
                             <td class="text-center">{{value['algotrader_rank']}}</td>
                             <td class="text-center">{{value['under_priced_pnt']}}</td>
                             <td class="text-center">{{value['twelve_month_momentum']|round(1)}}</td>
