--- a/app/templates/account/subscriptions_new.html
+++ b/app/templates/account/subscriptions_new.html
@@ -7,6 +7,10 @@ Algotrader | Subcriptions
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/subscriptions.css') }}">
 {% endblock %}
 
+{% block header %}
+{% include 'mainpage/header.html' %}
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
