--- a/app/templates/mainpage/main.html
+++ b/app/templates/mainpage/main.html
@@ -3,6 +3,10 @@
 Algotrader
 {% endblock %}
 
+{% block header %}
+{% include 'mainpage/header.html' %}
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
