traderstation round fix

--- a/app/templates/account/privacy_policy.html
+++ b/app/templates/account/privacy_policy.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader | Terms Of Use
+Algotrader | Privacy policy
 {% endblock %}
 
 {% block styles %}
