--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -318,7 +318,7 @@ Trader station
                             <td class="text-center">{{value['Close']}}</td>
                             <td class="text-center">{{value['Open']}}</td>
                             <td class="text-center">{{value['Ask']}}</td>
-                            <td class="text-center">{{value['buying_target_price_fmp']|round(2)}}</td>
+                            <td class="text-center">{{value['buying_target_price_fmp']}}</td>
                             <td class="text-center">{{value['target_price']|round(2)}}</td>
                             <td class="text-center">{{value['algotrader_rank']}}</td>
                             <td class="text-center">{{value['under_priced_pnt']}}</td>
