market data exception avoided

--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -55,7 +55,7 @@ Market data
                             {{ m.ticker }}
                         </a>
                     </td>
-                    <td>{{ m.yahoo_avdropP|round(1, 'floor') }}</td>
+                    <td>{{ m.yahoo_avdropP }}</td>
                     <td>{{ m.yahoo_avspreadP|round(1, 'floor') }}</td>
                     <td>{{ m.algotrader_rank }}</td>
                     <td>{{ m.under_priced_pnt }}</td>
